--- a/adlib/src/main/AndroidManifest.xml
+++ b/adlib/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
         android:supportsRtl="true">
         <activity
             android:name=".InterstitialAd"
+            android:launchMode="singleTask"
             android:theme="@android:style/Theme.NoTitleBar" />
     </application>
 
